--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://github.com/NathanJargon/Expenses-Tracker/tree/2-goals/templates/index.html">
-    <title>Document</title>
+    <title>Proxy</title>
 </head>
 <body>
     
