--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://github.com/NathanJargon/Expenses-Tracker/tree/2-goals/templates/index.html">
+    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/NathanJargon/Expenses-Tracker/2-goals/templates/index.html">
     <title>Proxy</title>
 </head>
 <body>
