--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://raw.githubusercontent.com/NathanJargon/Expenses-Tracker/2-goals/templates/index.html">
-    <title>Proxy</title>
+    <meta http-equiv="refresh" content="0; url=https://NathanJargon.github.io/templates/index.html">
+    <title>Document</title>
 </head>
 <body>
     
