--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://NathanJargon.github.io/templates/index.html">
+    <meta http-equiv="refresh" content="0; url=https://NathanJargon.github.io/blob/2-goals/templates/index.html">
     <title>Document</title>
 </head>
 <body>
