--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://NathanJargon.github.io/blob/2-goals/templates/index.html">
-    <title>Document</title>
+    <meta http-equiv="refresh" content="0; url=../templates/index.html">
+    <title>Redirecting...</title>
 </head>
 <body>
-    
+    <p>If you are not redirected, <a href="../templates/index.html">click here</a>.</p>
 </body>
 </html>
